finalized product page and got paid

--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -29,7 +29,7 @@
      {%- if product.metafields.recycle.picture_three != nil -%}
           <div class="picture-recycle-img third-icon">
             <img class="img-recycle" src="{{product.metafields.recycle.picture_three | file_url}}" />
-            <span class="icon-tooltip">{{ product.metafields.recycle.picture_three_copy }}</span>
+            <span class="icon-tooltip">{{ product.metafields.recycle.picure_three_copy }}</span>
           </div>
     {%- endif -%}
   </div>
