--- a/snippets/size-chart-modal.liquid
+++ b/snippets/size-chart-modal.liquid
@@ -26,7 +26,7 @@
                         </div>                        
                     </div>
                     <div class="table-wrapper inch-table active">
-                        <img src="{{ 'size-inch.png' | asset_img_url: 'master' }}">
+                        <img src="{{ 'size-inch.jpeg' | asset_img_url: 'master' }}">
                         {% comment %} <table class="table">                            
                             <thead class="table-column-container">
                                 <tr>
@@ -77,7 +77,7 @@
                         </table> {% endcomment %}
                     </div>     
                     <div class="table-wrapper centi-table">
-                        <img src="{{ 'size-cm.png' | asset_img_url: 'master' }}">
+                        <img src="{{ 'size-cm.jpeg' | asset_img_url: 'master' }}">
                         {% comment %} <table class="table">                            
                             <thead class="table-column-container">
                                 <tr>
@@ -138,41 +138,35 @@
                                 </a>
                             </div>
                         {% endfor %} {% endcomment %}
-                        <div class="modal-product-wrapper">
-                            <a href="/products/ramble-t-shirt" class="modal-product-link">
-                                <div class="title-unit-wrapper">
-                                    <p>Everyday reversible dress is a relaxed fit.</p>
-                                </div>
-                                <img src="https://cdn.shopify.com/s/files/1/0381/8707/3668/files/image_144-1_46f149ad-60b3-4e4d-9448-3a007c92591e.png?v=1664819377">
-                                <div class="bottom-content-wrapper">
-                                    <p>Relaxed fit</p>
-                                    <p>Intended to drape loosely on the body.</p>
-                                </div>
-                            </a>
+                        <div class="modal-product-wrapper">                            
+                            <div class="title-unit-wrapper">
+                                <p>Everyday reversible dress is a relaxed fit.</p>
+                            </div>
+                            <img src="https://cdn.shopify.com/s/files/1/0381/8707/3668/files/1-fit.jpg?v=1664906285">
+                            <div class="bottom-content-wrapper">
+                                <p>Medium fit</p>
+                                <p>Intended to leave room for comfort, slightly roomier silhouette.</p>
+                            </div>
                         </div>
                         <div class="modal-product-wrapper">
-                            <a href="/products/slothful-t-shirt-for-him-and-her" class="modal-product-link">
-                                <div class="title-unit-wrapper">
-                                    <p>Everyday fit.</p>
-                                </div>
-                                <img src="https://cdn.shopify.com/s/files/1/0381/8707/3668/files/image_144-1_46f149ad-60b3-4e4d-9448-3a007c92591e.png?v=1664819377">
-                                <div class="bottom-content-wrapper">
-                                    <p>Blah Blah</p>
-                                    <p>Blah BLah body.</p>
-                                </div>
-                            </a>
+                            <div class="title-unit-wrapper">
+                                <p>Everyday reversible dress is a relaxed fit.</p>
+                            </div>
+                            <img src="https://cdn.shopify.com/s/files/1/0381/8707/3668/files/2-fit.jpg?v=1664906293">
+                            <div class="bottom-content-wrapper">
+                                <p>Relaxed fit</p>
+                                <p>Intended to drape loosely on the body; slightly oversized fit.</p>
+                            </div>
                         </div>
                         <div class="modal-product-wrapper">
-                            <a href="/products/airy-cover-up-blouse" class="modal-product-link">
-                                <div class="title-unit-wrapper">
-                                    <p>Everyday Everyday Everyday fit.</p>
-                                </div>
-                                <img src="https://cdn.shopify.com/s/files/1/0381/8707/3668/files/image_144-1_46f149ad-60b3-4e4d-9448-3a007c92591e.png?v=1664819377">
-                                <div class="bottom-content-wrapper">
-                                    <p>Blah Blah Blah Blah Blah Blah</p>
-                                    <p>Blah BLah body Blah BLah body.</p>
-                                </div>
-                            </a>
+                            <div class="title-unit-wrapper">
+                                <p>Everyday reversible dress is a relaxed fit.</p>
+                            </div>
+                            <img src="https://cdn.shopify.com/s/files/1/0381/8707/3668/files/3-fit.jpg?v=1664906306">
+                            <div class="bottom-content-wrapper">
+                                <p>Slim fit</p>
+                                <p>Intended to hug the body; tapered and more trimmed at the waist.</p>
+                            </div>
                         </div>
                     </div>
                     {% comment %} <div class="bottom-content-wrapper">
@@ -186,27 +180,27 @@
                             <h3>How to measure</h3>
                             <div class="left-content-item-wrapper">
                                 <h5>1. Neck</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum in porttitor id lacus sodales non.</p>
+                                <p>Measure the circumference around your neck, keeping the measuring tape relatively loose to make sure you can breathe freely.</p>
                             </div>
                             <div class="left-content-item-wrapper">
                                 <h5>2. Sleeve</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum in porttitor id lacus sodales non.</p>
+                                <p>Bend your arm at 90 degrees, place your hand on your hip. Measure the length from the back of your neck to your shoulder, elbow, and wrist.</p>
                             </div>    
                             <div class="left-content-item-wrapper">
                                 <h5>3. Chest/Bust</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum in porttitor id lacus sodales non.</p>
+                                <p>Lift your arms slightly. Breathe in and measure the circumference around the fullest part of your chest.</p>
                             </div>
                             <div class="left-content-item-wrapper">
                                 <h5>4. Under bust</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum in porttitor id lacus sodales non.</p>
+                                <p>Lift your arms slightly. Breathe in and measure the circumference right under your bust.</p>
                             </div>
                             <div class="left-content-item-wrapper">
                                 <h5>5. Waist</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum in porttitor id lacus sodales non.</p>
+                                <p>Breathe in and measure the circumference around your natural waist, keeping the measuring tape relatively tight.</p>
                             </div>
                             <div class="left-content-item-wrapper">
                                 <h5>6. Hip</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum in porttitor id lacus sodales non.</p>
+                                <p>Stand with your heels joint together. measure the circumference around the fullest part of your hips.</p>
                             </div>
                         </div>    
                         <div class="right-content-wrapper">
@@ -222,69 +216,48 @@
                         <table class="table">                            
                             <thead class="table-column-container">
                                 <tr>
-                                    <td class="table-column">Alpha size</td>
-                                    <td class="table-column">Numeric Size</td>
-                                    <td class="table-column">Denim size</td>
+                                    <td class="table-column">Alpha</td>
                                     <td class="table-column">EU</td>
-                                    <td class="table-column">JP</td>
-                                    <td class="table-column">AU</td>
                                     <td class="table-column">UK</td>
+                                    <td class="table-column">US</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr class="table-row-container">
                                     <td class="table-row">XXS</td>
-                                    <td class="table-row">0 (000)</td>
-                                    <td class="table-row">30.5</td>
-                                    <td class="table-row">23</td>
-                                    <td class="table-row"></td>
-                                    <td class="table-row"></td>
-                                    <td class="table-row"></td>
+                                    <td class="table-row">30</td>
+                                    <td class="table-row">0 - 2</td>
+                                    <td class="table-row">000 - 00</td>
                                 </tr>
                                 <tr class="table-row-container">
                                     <td class="table-row">XS</td>
-                                    <td class="table-row">00 - 0</td>
-                                    <td class="table-row">31.5 - 32.5</td>
-                                    <td class="table-row">24 - 25</td>
-                                    <td class="table-row">30 - 32</td>
-                                    <td class="table-row">30 - 32</td>
-                                    <td class="table-row">30 - 32</td>
+                                    <td class="table-row">32 - 34</td>
+                                    <td class="table-row">4 - 6</td>
+                                    <td class="table-row">0 - 2</td> 
                                 </tr>
                                 <tr class="table-row-container">
                                     <td class="table-row">S</td>
-                                    <td class="table-row">2 - 4</td>
-                                    <td class="table-row">26 - 27</td>
-                                    <td class="table-row">34 - 36</td>
-                                    <td class="table-row">34 - 36</td>
-                                    <td class="table-row">34 - 36</td>
-                                    <td class="table-row">34 - 36</td>
+                                    <td class="table-row">36 - 38</td>
+                                    <td class="table-row">8 - 10</td>
+                                    <td class="table-row">4 - 6</td>
                                 </tr>
                                 <tr class="table-row-container">
                                     <td class="table-row">M</td>
-                                    <td class="table-row">6 - 8</td>
-                                    <td class="table-row">28 - 29</td>
-                                    <td class="table-row">38 - 40</td>
-                                    <td class="table-row">38 - 40</td>
-                                    <td class="table-row">38 - 40</td>
-                                    <td class="table-row">38 - 40</td>
+                                    <td class="table-row">40 - 42</td>
+                                    <td class="table-row">12 - 14</td>
+                                    <td class="table-row">8 - 10</td> 
                                 </tr>
                                 <tr class="table-row-container">
                                     <td class="table-row">L</td>
-                                    <td class="table-row">10 - 12</td>
-                                    <td class="table-row">30 - 31</td>
-                                    <td class="table-row">42 - 44</td>
-                                    <td class="table-row">42 - 44</td>
-                                    <td class="table-row">42 - 44</td>
-                                    <td class="table-row">42 - 44</td>
+                                    <td class="table-row">44 - 46</td>
+                                    <td class="table-row">16 - 18</td>
+                                    <td class="table-row">12 - 14</td> 
                                 </tr>
                                 <tr class="table-row-container">
                                     <td class="table-row">XL</td>
-                                    <td class="table-row">14 - 16</td>
-                                    <td class="table-row">32 - 33</td>
-                                    <td class="table-row">46 - 48</td>
-                                    <td class="table-row">46 - 48</td>
-                                    <td class="table-row">46 - 48</td>
-                                    <td class="table-row">46 - 48</td>
+                                    <td class="table-row">48 - 50</td>
+                                    <td class="table-row">20 - 22</td>
+                                    <td class="table-row">16 - 18</td> 
                                 </tr>                            
                             </tbody>                            
                         </table>
